[gd_scene load_steps=26 format=3 uid="uid://11etfvjn7c47"]

[ext_resource type="Script" uid="uid://c54s05rdlxtm2" path="res://gui/friend_select.gd" id="1_6512u"]
[ext_resource type="Texture2D" uid="uid://brniq7gqcyept" path="res://gui/sprites/portrait-border.png" id="1_m8gwc"]
[ext_resource type="Texture2D" uid="uid://dyex6l8mblrj7" path="res://npcs/npc_blue/sprites/portrait-blue5.png" id="2_tgmkg"]
[ext_resource type="Theme" uid="uid://saumduktdlp1" path="res://gui/dialogue_system/theme.tres" id="3_4bt3r"]
[ext_resource type="Texture2D" uid="uid://h5e1vwcb7rnn" path="res://npcs/npc_orange/sprites/orang_portrait2.png" id="4_t385a"]
[ext_resource type="Texture2D" uid="uid://we5p7j83o6ys" path="res://npcs/npc_green/sprites/portrait-green2.png" id="5_qkxae"]
[ext_resource type="Script" uid="uid://cr0d6k8ayqu34" path="res://gui/friend_select_option.gd" id="5_t385a"]
[ext_resource type="Resource" uid="uid://ldx4uvy4qsoc" path="res://npcs/npc_blue/npc_resource_blue.tres" id="6_sufu1"]
[ext_resource type="Resource" uid="uid://dqt64beo2bkyy" path="res://npcs/npc_orange/npc_resource_orange.tres" id="8_u6frv"]
[ext_resource type="Resource" uid="uid://o6llgdvmedlt" path="res://npcs/npc_green/npc_resource_green.tres" id="10_rg60b"]
[ext_resource type="Script" uid="uid://bkptx07j6nh6k" path="res://gui/seed_input.gd" id="11_nii62"]
[ext_resource type="FontFile" uid="uid://b2xrc2a804i14" path="res://gui/fonts/m5x7.ttf" id="11_oppkl"]
[ext_resource type="FontFile" uid="uid://hjapdop051dp" path="res://gui/fonts/Abaddon Light.ttf" id="11_rg60b"]
[ext_resource type="FontFile" uid="uid://da57q6ehibjas" path="res://gui/fonts/Abaddon Bold.ttf" id="11_u6frv"]

[sub_resource type="Gradient" id="Gradient_al43i"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6512u"]
gradient = SubResource("Gradient_al43i")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_x13dm"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nii62"]
gradient = SubResource("Gradient_x13dm")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t385a"]
texture = ExtResource("1_m8gwc")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6512u"]
load_path = "res://.godot/imported/portrait-blue5.png-a5fb460b7356f717bc940b7cd3daa419.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rg60b"]
texture = ExtResource("1_m8gwc")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[sub_resource type="Animation" id="Animation_u6frv"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_sufu1"]
resource_name = "enter"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(250, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_rg60b"]
resource_name = "leave"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oppkl"]
_data = {
&"RESET": SubResource("Animation_u6frv"),
&"enter": SubResource("Animation_sufu1"),
&"leave": SubResource("Animation_rg60b")
}

[node name="FriendSelect" type="CanvasLayer" groups=["temp_ui"]]
process_mode = 3
script = ExtResource("1_6512u")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 6.1035156e-05
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="Control"]
visible = false
modulate = Color(0, 0, 0, 0.68235296)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -143.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_6512u")

[node name="TextureRect2" type="TextureRect" parent="Control"]
modulate = Color(0, 0, 0, 0.68235296)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -241.00037
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_nii62")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -67.00003
offset_right = 181.0
offset_bottom = 50.99997
grow_horizontal = 2
grow_vertical = 2

[node name="PanelPortraitBlue" type="PanelContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t385a")

[node name="TextureButtonBlue" type="TextureButton" parent="Control/HBoxContainer/PanelPortraitBlue" node_paths=PackedStringArray("friend_select")]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
theme = ExtResource("3_4bt3r")
texture_normal = ExtResource("2_tgmkg")
texture_pressed = SubResource("CompressedTexture2D_6512u")
script = ExtResource("5_t385a")
friend_select = NodePath("../../../..")
npc_info = ExtResource("6_sufu1")

[node name="PanelPortraitOrange" type="PanelContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t385a")

[node name="TextureButtonOrange" type="TextureButton" parent="Control/HBoxContainer/PanelPortraitOrange" node_paths=PackedStringArray("friend_select")]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
texture_normal = ExtResource("4_t385a")
script = ExtResource("5_t385a")
friend_select = NodePath("../../../..")
npc_info = ExtResource("8_u6frv")

[node name="PanelPortraitGreen" type="PanelContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t385a")

[node name="TextureButtonGreen" type="TextureButton" parent="Control/HBoxContainer/PanelPortraitGreen" node_paths=PackedStringArray("friend_select")]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
texture_normal = ExtResource("5_qkxae")
script = ExtResource("5_t385a")
friend_select = NodePath("../../../..")
npc_info = ExtResource("10_rg60b")

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = 66.99997
offset_right = 56.5
offset_bottom = 102.99997
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4bt3r")
text = "Go Alone"

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 325.0
offset_top = 220.0
offset_right = 463.0
offset_bottom = 256.0
theme_override_styles/normal = SubResource("StyleBoxTexture_rg60b")
emoji_menu_enabled = false
deselect_on_focus_loss_enabled = false
select_all_on_focus = true
script = ExtResource("11_nii62")

[node name="Label" type="Label" parent="Control/LineEdit"]
layout_mode = 0
offset_left = 98.0
offset_top = -17.0
offset_right = 138.0
offset_bottom = 1.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("11_oppkl")
text = "Seed"

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -121.00003
offset_right = 109.0
offset_bottom = -81.00003
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("11_rg60b")
theme_override_fonts/bold_font = ExtResource("11_u6frv")
bbcode_enabled = true
text = "[wave][b]Take a friend with you?[/b][/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oppkl")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"sfx"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="Control/LineEdit" to="Control/LineEdit" method="_on_gui_input"]
[connection signal="focus_entered" from="Control/LineEdit/Label" to="Control/LineEdit" method="_on_label_focus_entered"]
